fix: broken links and titles on mobile

--- a/src/css/starton.css
+++ b/src/css/starton.css
@@ -287,7 +287,10 @@ text-decoration: none;
 body {
     width: 100%;
   }
-
+header.hero{
+        margin:10px;
+        word-break: break-word;
+      }
 
 .barre1 {
 display:none;
